--- a/estilos/style.css
+++ b/estilos/style.css
@@ -142,6 +142,10 @@ body {
     .apresentacao__conteudo{
         width: auto;
     }
+
+    .apresentacao__img{
+        width: auto;
+    }
 }
 
 /* Story CSS */
