--- a/estilos/style.css
+++ b/estilos/style.css
@@ -90,9 +90,9 @@
 
 .apresentacao__links__navegacao:hover{
     background-color: var(--cor-hover);
-    width: 31,25rem;
-    padding:1.8rem 0px;
-    font-size: 1.8rem;
+    width: 500px;
+    padding:30px 0px;
+    font-size: 30px;
 }
 
 .bloco {
@@ -151,6 +151,12 @@ body {
 
     .apresentacao__links__navegacao{
         width: 100%;
+    }
+
+    .apresentacao__links__navegacao:hover{       
+        width: 100%;
+        padding:21.5px 0px;        
+        font-size: 1.5rem;     
     }
 
     .apresentacao__img{
