--- a/estilos/style.css
+++ b/estilos/style.css
@@ -15,22 +15,59 @@
 }
 
 .cabecalho{    
-    padding: 2% 0% 0% 15%;    
+    padding: 2% 0% 2% 0%;
+    background: linear-gradient(rgba(17, 17, 17, 0.8), rgba(20, 20, 20, 1));       
+}
+
+.logo{
+    font-size: 1.5em;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    text-decoration: none;    
+    color: var(--cor-segundaria);
+    font-family: system-ui, -apple-system, Helvetica, Arial, sans-serif;
 }
 
 .cabecalho__menu {    
     display: flex;    
-    gap: 5rem;
+    gap: 3rem;
     width: auto;
+    justify-content: space-around;        
 }
 
-.cabecalho__menu__link{   
-    display: flex; 
-    text-decoration: none;
-    font-family: var(--fonte-segundaria);
-    font-size: 1.5rem;
-    font-weight: 600;
-    color: var(--cor-tercearia);
+.nav-list{    
+    align-items: center;
+    list-style: none;
+    display: flex;
+}
+
+.nav-list li {
+    letter-spacing: 2px;
+    margin-left: 2em;    
+}
+
+.mobile-menu{
+    cursor: pointer;
+    display: none;
+}
+
+
+
+.mobile-menu div{
+    width: 32px;
+    height: 2px;
+    background: #ffff;
+    margin: 8px;
+}
+
+a {
+  color: #fff;
+  text-decoration: none;
+  transition: 0.3s;
+}
+  
+a:hover {
+  opacity: 0.7;
 }
 
 .apresentacao {
@@ -39,6 +76,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-direction: column-reverse;
 }
 
 .apresentacao__conteudo{
@@ -103,8 +141,25 @@
 body {    
     /*height: 100vh;*/
     box-sizing: border-box;
-    background-color: var(--cor-primaria);
+    background: linear-gradient(45deg, #000000, #191919, #000000, #0F0E0E);
+    background-size: 300% 300%;
+    animation: colors 5s ease;
     color: #ffff;    
+}
+
+@keyframes colors {
+    0%{
+        background-position: 0% 50%;
+    }
+
+    50%{
+        background-position: 100% 50%;
+    }
+
+    100%{
+        background-position: 0% 50%;
+    }
+    
 }
 
 .titulo-destaque {
@@ -112,12 +167,13 @@ body {
 }
 
 .apresentacao__img{
-    width: 50%;
+    width: 30%;
+    border-radius: 2em;
 }
 
 .rodape{
-    color: black;
-    background-color: var(--cor-tercearia);
+    color: var(--cor-tercearia);
+    background-color: transparent;
     padding: 24px;
     text-align: center;
     font-family: var(--fonte-segundaria);
@@ -125,21 +181,39 @@ body {
     font-weight: 400;
 }
 
-/* Story CSS */
-
-.img_curriculum{
-    width: 50%;
-}
 
 @media (max-width: 1250px){
-    .cabecalho{        
-        padding: 3%;
+
+    body{
+        overflow-x: hidden;
+    }
+    
+    .logo {
+       padding-top: 0.1em;
     }
 
-    .cabecalho__menu{        
-        justify-content: center;
-        gap: 1rem;                  
+    .nav-list {
+        position: absolute;
+        top: 7vh;
+        right: 0;
+        width: 70vw;
+        height: 100vh;
+        background: linear-gradient(rgba(17, 17, 17, 0.8), rgba(20, 20, 20, 1));   
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        transform: translateX(100%);
+        transition: transform 0.3s ease-in;        
+    }   
+
+    .nav-list li {
+        margin-left: 0;
+        opacity: 0;
     }
+
+    .mobile-menu{
+        display: block;
+    }   
 
     .apresentacao {
         flex-direction: column-reverse;
@@ -163,4 +237,31 @@ body {
     .apresentacao__img{
         width: 100%;        
     }
+}
+
+.nav-list.active {
+    transform: translateX(0);
+  }
+  
+@keyframes navLinkFade {
+    from {
+      opacity: 0;
+      transform: translateX(50px);
+    }
+    to {
+      opacity: 1;
+      transform: translateX(0);
+    }
+}
+  
+.mobile-menu.active .line1 {
+    transform: rotate(-45deg) translate(-8px, 8px);
+}
+  
+.mobile-menu.active .line2 {
+    opacity: 0;
+}
+  
+.mobile-menu.active .line3 {
+    transform: rotate(45deg) translate(-5px, -7px);
 }
